Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59750

initial QNAM::get non-SSL request is slow due to SSL entropy generation on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10
    • 5.8.0
    • Network
    • None
    • Windows
    • 70d8460fc20dab2e1408b8d27ef5fe7a80ba9dc6

    Description

      In addition to the (fixed) slow get calls in general, the first request experiences an even greater delay (several 100 ms) which gets even longer (4 seconds in our case) if the program makes a significant amount of dynamic allocations beforehand, due to the use of Heap32Next in OpenSSL.
      This is especially bad because the request isn’t even over HTTPS.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            darklighter Norbert Pfeiler
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes